--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,10 +1,10 @@
-preload = ~/.wallpapers/hexagon_02.png
+preload = ~/.wallpapers/default.jpg
 #if more than one preload is desired then continue to preload other backgrounds
 #preload = /path/to/next_image.png
 # .. more preloads
 
 #set the default wallpaper(s) seen on inital workspace(s) --depending on the number of monitors used
-wallpaper = ,~/.wallpapers/hexagon_02.png
+wallpaper = ,~/.wallpapers/default.jpg
 #if more than one monitor in use, can load a 2nd image
 #wallpaper = monitor2,/path/to/next_image.png
 # .. more monitor
