Fix font rendering and GTK themes settings

--- a/.config/fontconfig/conf.d/19-DefaultProperties.conf
+++ b/.config/fontconfig/conf.d/19-DefaultProperties.conf
@@ -4,7 +4,7 @@
 <fontconfig>
   <match target="font">
     <edit name="hintstyle" mode="assign" binding="strong">
-      <int>1</int>
+      <int>hintslight</int>
     </edit>
     <edit name="antialias" mode="assign" binding="strong">
       <bool>true</bool>
