--- a/.config/fontconfig/conf.d/19-DisplayProperties.conf
+++ b/.config/fontconfig/conf.d/19-DisplayProperties.conf
@@ -4,13 +4,13 @@
 <fontconfig>
   <match target="font">
     <edit name="rgba" mode="assign" binding="strong">
-      <int>1</int>
+      <int>rgb</int>
     </edit>
     <edit name="lcdfilter" mode="assign" binding="strong">
-      <int>1</int>
+      <int>lcdlight</int>
     </edit>
     <edit name="scale" mode="assign" binding="strong">
-      <double>1.0</double>
+      <double>1</double>
     </edit>
     <edit name="dpi" mode="assign" binding="strong">
       <double>75.0</double>
