--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -43,6 +43,7 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = MOZ_ENABLE_WAYLAND,1
 env = LIBVA_DRIVER_NAME,radeonsi
 env = GTK_THEME,Nordic-v40
+env = GTK_ICON_THEME,Papirus-Dark
 
 
 # Execute your favorite apps at launch
