--- a/.config/gtk-4.0/settings.ini
+++ b/.config/gtk-4.0/settings.ini
@@ -1,5 +1,8 @@
 [Settings]
-gtk-hint-font-metrics=1
+gtk-hint-font-metrics=true
 gtk-xft-rgba=rgb
-gtk-xft-antialias=1
+gtk-xft-antialias=true
+gtk-theme-name=Nordic-v40
+gtk-icon-theme-name=Papirus-Dark
+
 
