--- a/.config/mako/config
+++ b/.config/mako/config
@@ -1,7 +1,7 @@
 font=FontAwesome 10
-background-color=#2e3440
+background-color=#2e344085
 text-color=#d8dee9
-default-timeout=3000
+default-timeout=5000
 padding=15
 border-size=1
 border-radius=5
