mpv xvid black screen fix

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -31,7 +31,7 @@ env = QT_SCALE_FACTOR,0.9
 env = GDK_SCALE,1.25
 #env = GDK_DPI_SCALE,1.1
 
-#env = _JAVA_AWT_WM_NONREPARENTING,1
+env = _JAVA_AWT_WM_NONREPARENTING,1
 env = GDK_BACKEND,wayland
 env = QT_QPA_PLATFORM,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
@@ -141,7 +141,6 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
     no_gaps_when_only = 1
 }
 
@@ -161,7 +160,6 @@ gestures {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
