XCURSOR_THEME forced in hyprland conf

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,7 +14,7 @@ exec-once = rfkill unblock bluetooth
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = ,preferred,auto,auto
-monitor = eDP-1,1920x1080@60,0x0,1.25
+monitor = eDP-1,1920x1080@60,0x0,1.20
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -24,6 +24,7 @@ xwayland {
 }
 
 # Some default env vars.
+env = XCURSOR_THEME,Volantes Light Cursors
 env = XCURSOR_SIZE,32
 
 #env = QT_FONT_DPI,96
@@ -147,6 +148,12 @@ master {
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = off
+}
+
+misc {
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
+    #first_launch_animation = false
 }
 
 # Example per-device config
