Replaced swayidle and swaylock with hyprland tools

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -61,7 +61,7 @@ exec-once = gsettings set org.gnome.desktop.interface font-antialiasing rgba
 exec-once = hyprpaper
 exec-once = waybar
 
-exec-once = swayidle -w
+exec-once = hypridle
 
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
