current locale and caps_lock indication

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -25,20 +25,26 @@ general {
 # INPUT FIELD
 input-field {
     monitor =
-    size = 300, 60
+    size = 350, 60
     outline_thickness = 2
     dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.35 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
     outer_color = rgba(255, 255, 255, 0.5)
-    inner_color = rgba(0, 0, 0, 0.2)
+    inner_color = rgba(0, 0, 0, 0.6)
     font_color = rgba(255,255,255, 0.2)
     fade_on_empty = false
-    rounding = 0.9
+    rounding = 10
     check_color = rgb(204, 136, 34)
-    placeholder_text = <small><span foreground="##cdd6f4">Type your password...</span></small>
+    placeholder_text = <small><span foreground="##cdd6f4">Ваш пароль...</span></small>
     hide_input = false
-    position = 0, -200
+
+    capslock_color = rgba(255, 0, 0, 0.4)
+    numlock_color = -1
+    bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
+    invert_numlock = false # change color if numlock is off
+
+    position = 0, -250
     halign = center
     valign = center
 }
@@ -60,8 +66,8 @@ label {
   monitor =
   text = cmd[update:1000] echo "$(date +"%H:%M")"
   color = rgba(242, 243, 244, 0.75)
-  font_size = 160
-  font_family = Noto Sans
+  font_size = 200
+  font_family = Cantarell bold
   position = 0, 130
   halign = center
   valign = center
@@ -102,20 +108,46 @@ label {
 #    font_size = 18
 #    font_family = Metropolis Light, Font Awesome 6 Free Solid
 #    position = 0, 50
-#    halign = center
+#    halign = centeir
 #    valign = bottom
 #}
 #
 label {
     monitor =
-    text = cmd[update:1000] echo "Welcome back, $USER!"
-    color = $foreground
+    text = cmd[update:1000] echo "С возвращением, ${USER^}!" 
+    color = rgb(255,255,255)
     font_size = 24
     font_family = Noto Sans
     position = 0, -130
     halign = center
     valign = center
 }
+# KEYBOARD LAYOUT
+shape {
+    monitor =
+    size = 40, 40
+    color = rgba(128, 128, 128, 0)
+    rounding = 3
+    border_size = 2
+    border_color= rgba(255, 255, 255, 0.5)
+    rotate = 0
+    xray = false
+    position = -20, 10
+    halign = right
+    valign = bottom
+}
+
+label {
+    monitor =
+    text = $LAYOUT[En, Ru]
+    color = rgb(255,255,255)
+    font_size = 14
+    font_family = Noto Sans
+    position = -30, 20
+    halign = right
+    valign = bottom
+}
+
 #
 #label {
 #    monitor =
