--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -2,16 +2,18 @@ general {
   lock_cmd = pidof hyprlock || hyprlock
   before_sleep_cmd = loginctl lock-session
   after_sleep_cmd = hyprctl dispatch dpms on
+  ignore_dbus_inhibit = false
+  ignore_systemd_inhibit = false   
 }
 
 listener {
-  timeout = 100
+  timeout = 300
   on-timeout = loginctl lock-session
   on-resume = notify-send "Welcome back!"
 }
 
 listener {
-  timeout = 130
+  timeout = 330
   on-timeout = hyprctl dispatch dpms off
   on-resume = hyprctl dispatch dpms on
 }
