--- a/.config/gtk-4.0/settings.ini
+++ b/.config/gtk-4.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-hint-font-metrics=true
 gtk-xft-rgba=rgb
-gtk-xft-antialias=true
+gtk-xft-antialias=1
 gtk-theme-name=Nordic-v40
 gtk-icon-theme-name=Papirus-Dark
 
