Terminal window padding

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,7 +7,7 @@
 #: characters.
 
 
-font_family      Iosevka
+font_family      Iosevka Nerd Font Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -24,7 +24,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 10
+font_size 11
 
 #: Font size (in pts)
 
@@ -328,7 +328,7 @@ single_window_margin_width -1000.0
 #: visible. Negative values will cause the value of
 #: window_margin_width to be used instead.
 
-window_padding_width 5.0
+window_padding_width 2.0
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border)
