Added suspend hypridle listener action

--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -3,7 +3,7 @@ general {
   before_sleep_cmd = loginctl lock-session
   after_sleep_cmd = hyprctl dispatch dpms on
   ignore_dbus_inhibit = false
-  ignore_systemd_inhibit = false   
+  ignore_systemd_inhibit = false
 }
 
 listener {
@@ -13,7 +13,12 @@ listener {
 }
 
 listener {
-  timeout = 330
+  timeout = 360
   on-timeout = hyprctl dispatch dpms off
   on-resume = hyprctl dispatch dpms on
+}
+
+listener {
+  timeout = 390
+  on-timeout = systemctl suspend
 }
