--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -43,15 +43,15 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = MOZ_ENABLE_WAYLAND,1
 env = LIBVA_DRIVER_NAME,radeonsi
-env = GTK_THEME,Nordic-v40
+env = GTK_THEME,Nordic
 env = GTK_ICON_THEME,Papirus-Dark
 
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 
-exec-once = gsettings set org.gnome.desktop.interface gtk-theme Nordic-v40
-exec-once = gsettings set org.gnome.desktop.wm.preferences theme Nordic-v40
+exec-once = gsettings set org.gnome.desktop.interface gtk-theme Nordic
+exec-once = gsettings set org.gnome.desktop.wm.preferences theme Nordic
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme default
 exec-once = gsettings set org.gnome.desktop.interface cursor-size 32
 exec-once = gsettings set org.gnome.desktop.interface color-scheme prefer-dark
