--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -40,8 +40,8 @@
             "4": "",
             "5": "",
 	    "6": "",
-	    "7": "♪ ",
-            "urgent": " ",
+	    "7": " ",
+            "urgent": " ",
             "focused": "",
             "default": ""
         },
