Increase inner gaps

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,11 +28,11 @@ env = XCURSOR_THEME,Volantes Light Cursors
 env = XCURSOR_SIZE,32
 
 #env = QT_FONT_DPI,96
-env = QT_SCALE_FACTOR,0.9
-env = GDK_SCALE,1.25
+##env = QT_SCALE_FACTOR,0.9
+##env = GDK_SCALE,1.25
 #env = GDK_DPI_SCALE,1.1
 
-env = _JAVA_AWT_WM_NONREPARENTING,1
+#env = _JAVA_AWT_WM_NONREPARENTING,1
 env = GDK_BACKEND,wayland
 env = QT_QPA_PLATFORM,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
@@ -88,7 +88,7 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 1
+    gaps_in = 2
     gaps_out = 0
     border_size = 1
 
@@ -101,8 +101,7 @@ general {
 }
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more 
     rounding = 3
 
     blur {
