--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -383,7 +383,7 @@ resize_draw_strategy static
 
 #: Tab bar {{{
 
-tab_bar_edge bottom
+tab_bar_edge top
 
 #: Which edge to show the tab bar on, top or bottom
 
@@ -391,7 +391,7 @@ tab_bar_margin_width 5.0
 
 #: The margin to the left and right of the tab bar (in pts)
 
-tab_bar_style separator
+tab_bar_style powerline
 
 #: The tab bar style, can be one of: fade, separator or hidden. In the
 #: fade style, each tab's edges fade into the background color, in the
@@ -429,11 +429,11 @@ tab_title_template {index}: {title}
 #: title. If you wish to include the tab-index as well, use something
 #: like: {index}: {title}. Useful if you have shortcuts mapped for
 #: goto_tab N.
-# active_tab_foreground   #000
-# active_tab_background   #eee
+active_tab_foreground   #000
+active_tab_background   #81A1C1
 active_tab_font_style   bold-italic
-# inactive_tab_foreground #444
-# inactive_tab_background #999
+inactive_tab_foreground #444
+inactive_tab_background #D8DEE9
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles
@@ -830,7 +830,7 @@ map kitty_mod+0 tenth_window
 
 map kitty_mod+right next_tab
 map kitty_mod+left  previous_tab
-map kitty_mod+t     new_tab
+map kitty_mod+t     new_tab_with_cwd
 map kitty_mod+q     close_tab
 map kitty_mod+.     move_tab_forward
 map kitty_mod+,     move_tab_backward
