--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -166,6 +166,8 @@ misc {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+#
+windowrulev2 = float, class:(showmethekey-gtk), initialClass:(showmethekey-gtk)
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
