--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,7 +45,7 @@ env = MOZ_ENABLE_WAYLAND,1
 env = LIBVA_DRIVER_NAME,radeonsi
 env = GTK_THEME,Nordic
 env = GTK_ICON_THEME,Papirus-Dark
-
+env = GOPATH,~/.local/go/
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
@@ -168,6 +168,11 @@ misc {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 #
 windowrulev2 = float, class:(showmethekey-gtk), initialClass:(showmethekey-gtk)
+windowrulev2 = workspace 2, class:^(firefox)$
+windowrulev2 = workspace 1, class:^(kitty)$
+windowrulev2 = workspace 5, class:^(org.telegram.desktop)$
+windowrulev2 = workspace 7, class:^(org.fooyin.fooyin)$
+
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
