Fix fooing layout

--- a/.config/fooyin/fooyin.conf
+++ b/.config/fooyin/fooyin.conf
@@ -9,6 +9,7 @@ Paths="@Variant(\0\0\0\x7f\0\0\0\vCoverPaths\0\0\0\0\x4\0\0\0\x1e\0%\0p\0\x61\0t
 VolumeStep=1
 
 [DirectoryBrowser]
+Mode=1
 Path=/home/andrew
 
 [Engine]
@@ -41,7 +42,7 @@ ExcludeTypes=@Invalid()
 ExternalExcludeTypes=@Invalid()
 ExternalRestrictTypes=@Invalid()
 MarkUnavailable=false
-MarkUnavailableOnStartup=false
+MarkUnavailableOnStartup=true
 RestrictTypes=@Invalid()
 
 [LibraryTree]
@@ -54,13 +55,14 @@ UserToken=
 AlternatingColours=false
 
 [Player]
-PlayMode=2
+PlayMode=0
 SavePlaybackState=true
 
 [Playlist]
 AutoExport=false
 AutoExportPath=/home/andrew/.local/share/fooyin/playlists
 AutoExportType=m3u8
+CursorFollowsPlayback=true
 SaveMetadata=false
 SavePathType=0
 SkipUnavailable=false
@@ -91,4 +93,4 @@ BarSpacing=2
 ChannelSpacing=4
 Colours=@Variant(\0\0\0\x7f\0\0\0\x19\x46ooyin::VuMeter::Colours\0\0\0\0\x4\0\x1\0\0\x3\x3\x3\x3\x3\x3\0\0\x1\x1\xff\xff\xff\xff\xff\xff\xff\xff\0\0\x2\x1\xff\xff\0\0\xe\xe\x18\x18\0\0\x3\x1\xff\xff\0\0\x86\x86\xec\xec\0\0)
 FalloffTime=30
-PeakHoldTime=1.1
+PeakHoldTime=1
