Fix hyprland no_gaps_when_only error

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -110,10 +110,10 @@ decoration {
         passes = 1
     }
 
-    drop_shadow = no
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+#####?    drop_shadow = no
+#####?    shadow_range = 4
+#####?    shadow_render_power = 3
+#####?    col.shadow = rgba(1a1a1aee)
 }
 
 animations {
@@ -136,12 +136,10 @@ dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
-    no_gaps_when_only = 1
 }
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    no_gaps_when_only = 1
 }
 
 gestures {
@@ -173,6 +171,12 @@ windowrulev2 = workspace 1, class:^(kitty)$
 windowrulev2 = workspace 5, class:^(org.telegram.desktop)$
 windowrulev2 = workspace 7, class:^(org.fooyin.fooyin)$
 
+
+# Workspace rules
+# Replace no_gaps_when_only
+workspace = w[t1], gapsin:0, gapsout:0, border:0
+workspace = w[tg1], gapsin:0, gapsout:0, border:0
+workspace = f[1], gapsin:0, gapsout:0, border:0
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
