Fix hyprland resize bind

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -205,10 +205,10 @@ bind = $mainMod SHIFT, up, movewindow, u
 bind = $mainMod SHIFT, down, movewindow, d
 
 # Resize active window with mainMod + Ctrl + arrow keys
-bind = $mainMod CTRL, left, resizeactive, l
-bind = $mainMod CTRL, right, resizeactive, r
-bind = $mainMod CTRL, up, resizeactive, u
-bind = $mainMod CTRL, down, resizeactive, d
+bind = $mainMod CTRL, left, resizeactive,-50 0 
+bind = $mainMod CTRL, right, resizeactive,50 0
+bind = $mainMod CTRL, up, resizeactive,0 -50
+bind = $mainMod CTRL, down, resizeactive,0 50
 
 # will switch to a submap called resize
 bind = $mainMod, R, submap, resize
