--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -9,7 +9,7 @@ general {
 listener {
   timeout = 300
   on-timeout = loginctl lock-session
-  on-resume = notify-send "Welcome back!"
+#  on-resume = notify-send "Welcome back!"
 }
 
 listener {
