Enable RGB subpixel antialiasing

--- a/.config/fontconfig/conf.d/10-sub-pixel-rgb.conf
+++ b/.config/fontconfig/conf.d/10-sub-pixel-rgb.conf
@@ -10,6 +10,6 @@
       want to set something for others. So we use "append" here to get this working
       in both cases so that most clients would takes a look at the first place only.
     -->
-    <edit name="rgba" mode="append"><const>bgr</const></edit>
+    <edit name="rgba" mode="append"><const>rgb</const></edit>
   </match>
 </fontconfig>
