--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -4,6 +4,7 @@
     //
     // See https://github.com/Alexays/Waybar/wiki/Examples for details
     //
+    "reload_style_on_change": true,
     // Waybar at top layer
     "layer": "top",
     // Waybar position (top|bottom|left|right)  
