--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -167,11 +167,12 @@ misc {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 #
 windowrulev2 = float, class:(showmethekey-gtk), initialClass:(showmethekey-gtk)
+windowrulev2 = float, class:(wofi)
+windowrulev2 = dimaround, class:(wofi)
 windowrulev2 = workspace 2, class:^(firefox)$
 windowrulev2 = workspace 1, class:^(kitty)$
 windowrulev2 = workspace 5, class:^(org.telegram.desktop)$
 windowrulev2 = workspace 7, class:^(org.fooyin.fooyin)$
-
 
 # Workspace rules
 # Replace no_gaps_when_only
@@ -179,7 +180,10 @@ workspace = w[t1], gapsin:0, gapsout:0, border:0
 workspace = w[tg1], gapsin:0, gapsout:0, border:0
 workspace = f[1], gapsin:0, gapsout:0, border:0
 
-
+# Layer rules
+# Blur
+layerrule = blur, class:^(swww)$
+layerrule = blurpopups, wofi
 layerrule = blur, logout_dialog
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
