--- a/boot/loader/entries/2023-10-04_13-15-48_linux.conf
+++ b/boot/loader/entries/2023-10-04_13-15-48_linux.conf
@@ -1,8 +1,8 @@
 # Created by: archinstall
 # Created on: 2023-10-04_13-15-48
 title   Arch Linux (linux)
-linux   /vmlinuz-linux
+linux   /vmlinuz-linux-lts
 initrd  /amd-ucode.img
-initrd  /initramfs-linux.img
+initrd  /initramfs-linux-lts.img
 options root=PARTUUID=ff5c90c6-5b94-4284-a6d1-173c4e0cc114 rw rootfstype=ext4 quiet mitigations=off vt.global_cursor_default=0 nmi_watchdog=0 loglevel=3 rd.systemd.show_status=auto rd.udev.log_priority=3 amd_pstate=active zswap.enabled=0
 
