SHIFT prtsc action fix

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -285,5 +285,5 @@ $picturefilename = $(xdg-user-dir PICTURES)/screen-"$(date +%s)".png
 
 bind = ,Print, exec, grim $picturefilename
 bind = $mainMod, Print, exec, grim -g "$(slurp)" $picturefilename
-bind = $mainMod SHIFT, Print, exec, hyprctl -j activewindow | jq -r ""\(.at[0]),\(.at[1]) \(.size[0])x\(.size[1])"" | grim -g - $picturefilename
+bind = $mainMod SHIFT, Print, exec, hyprctl -j activewindow | jq -r "\"\(.at[0]),\(.at[1]) \(.size[0])x\(.size[1])\"" | grim -g - $picturefilename
 
