Screen brightness key bindings

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -279,6 +279,9 @@ bind = , XF86AudioMute, exec, pamixer -t
 # Screen brightness
 bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
 bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
+bind = $mainMod SHIFT, N, exec, brightnessctl s 40%
+bind = $mainMod CTRL, N, exec, brightnessctl s 100%
+
 
 # $mod+PrintScreen — area screenshot, PrintScreen — fullscreen screenshot.
 $picturefilename = $(xdg-user-dir PICTURES)/screen-"$(date +%s)".png
