wlogout style changed

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -194,7 +194,7 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, code:36, exec, kitty #SUPER+Enter
 bind = $mainMod, Q, killactive,
-bind = $mainMod CTRL, Q, exec, wlogout --no-span --buttons-per-row 5 --column-spacing 5 --margin-top 360 --margin-bottom 360
+bind = $mainMod CTRL, Q, exec, wlogout --no-span --buttons-per-row 5 --margin-top 360 --margin-bottom 360
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, V, togglefloating
 bind = $mainMod, F, fullscreen
