Set GTK default font to Inter (was Cantarel)

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -59,7 +59,8 @@ exec-once = gsettings set org.gnome.desktop.interface cursor-theme $Cursor
 exec-once = gsettings set org.gnome.desktop.interface cursor-size 32
 exec-once = gsettings set org.gnome.desktop.interface color-scheme prefer-dark
 exec-once = gsettings set org.gnome.desktop.interface icon-theme $Icons
-exec-once = gsettings set org.gnome.desktop.interface font-antialiasing rgba
+exec-once = gsettings set org.gnome.desktop.interface font-antialiasing "'rgba'"
+exec-once = gsettings set org.gnome.desktop.interface font-name "'Inter Variable 11'"
 
 exec-once = hyprpaper
 exec-once = waybar
@@ -194,7 +195,7 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, code:36, exec, kitty #SUPER+Enter
 bind = $mainMod, Q, killactive,
-bind = $mainMod CTRL, Q, exec, wlogout --no-span --buttons-per-row 5 --margin-top 340 --margin-bottom 340
+bind = $mainMod CTRL, Q, exec, wlogout --show-binds --no-span --buttons-per-row 5 --margin-top 340 --margin-bottom 340
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, V, togglefloating
 bind = $mainMod, F, fullscreen
