--- a/.config/fontconfig/conf.d/97-Inter.conf
+++ b/.config/fontconfig/conf.d/97-Inter.conf
@@ -4,7 +4,7 @@
   <alias>
     <family>sans-serif</family>
     <prefer>
-      <family>Cantarell</family>
+      <family>Inter</family>
     </prefer>
   </alias>
 </fontconfig>
