hyprlock fonts changed

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -67,7 +67,7 @@ label {
   text = cmd[update:1000] echo "$(date +"%H:%M")"
   color = rgba(242, 243, 244, 0.75)
   font_size = 200
-  font_family = Cantarell bold
+  font_family = Inter bold
   position = 0, 130
   halign = center
   valign = center
@@ -117,7 +117,7 @@ label {
     text = cmd[update:1000] echo "С возвращением, ${USER^}!" 
     color = rgb(255,255,255)
     font_size = 24
-    font_family = Noto Sans
+    font_family = Inter
     position = 0, -130
     halign = center
     valign = center
@@ -141,9 +141,8 @@ label {
     monitor =
     text = $LAYOUT[En, Ru]
     color = rgb(255,255,255)
-    font_size = 14
-    font_family = Noto Sans
-    position = -30, 20
+    font_size = 12
+    position = -32, 22
     halign = right
     valign = bottom
 }
@@ -155,7 +154,7 @@ label {
 #    color = $foreground
 #    font_size = 24
 #    font_family = JetBrains Mono
-#    position = -90, -10
+#    position = -110, -30
 #    halign = right
 #    valign = top
 #}
