reduce GTK font size

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,7 +28,7 @@ ecosystem {
 
 # Some default env vars.
 $Cursor = Volantes Light Cursors
-$Icons = Colloid-Nord-Dark
+$Icons = Papirus-Dark
 $Theme = Nordic
 
 env = XCURSOR_THEME,$Cursor
@@ -60,7 +60,7 @@ exec-once = gsettings set org.gnome.desktop.interface cursor-size 32
 exec-once = gsettings set org.gnome.desktop.interface color-scheme prefer-dark
 exec-once = gsettings set org.gnome.desktop.interface icon-theme $Icons
 exec-once = gsettings set org.gnome.desktop.interface font-antialiasing "'rgba'"
-exec-once = gsettings set org.gnome.desktop.interface font-name "'Inter Variable 11'"
+exec-once = gsettings set org.gnome.desktop.interface font-name "'Inter Variable 10'"
 
 exec-once = hyprpaper
 exec-once = waybar
