--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -26,13 +26,15 @@ ecosystem {
   no_donation_nag = true
 }
 
-# Some default env vars.
+# Some defaults
 $Cursor = Volantes Light Cursors
+$Cursor_size = 32
 $Icons = Papirus-Dark
 $Theme = Nordic
+$Font = Inter Variable 10
 
 env = XCURSOR_THEME,$Cursor
-env = XCURSOR_SIZE,32
+env = XCURSOR_SIZE,$Cursor_size
 env = GDK_BACKEND,wayland
 env = QT_QPA_PLATFORM,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
@@ -41,6 +43,7 @@ env = SDL_VIDEODRIVER,wayland
 env = BEMENU_BACKEND,wayland
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_FONT_DPI,105
 env = MOZ_ENABLE_WAYLAND,1
 env = LIBVA_DRIVER_NAME,radeonsi
 env = GTK_THEME,$Theme
@@ -56,11 +59,11 @@ exec-once = rfkill unblock bluetooth
 exec-once = gsettings set org.gnome.desktop.interface gtk-theme $Theme
 exec-once = gsettings set org.gnome.desktop.wm.preferences theme $Theme
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme $Cursor
-exec-once = gsettings set org.gnome.desktop.interface cursor-size 32
+exec-once = gsettings set org.gnome.desktop.interface cursor-size $Cursor_size
 exec-once = gsettings set org.gnome.desktop.interface color-scheme prefer-dark
 exec-once = gsettings set org.gnome.desktop.interface icon-theme $Icons
 exec-once = gsettings set org.gnome.desktop.interface font-antialiasing "'rgba'"
-exec-once = gsettings set org.gnome.desktop.interface font-name "'Inter Variable 10'"
+exec-once = gsettings set org.gnome.desktop.interface font-name $Font
 
 exec-once = hyprpaper
 exec-once = waybar
