--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -6,8 +6,8 @@ standard_dialogs=default
 style=kvantum
 
 [Fonts]
-fixed="Cantarell,11,-1,5,300,0,0,0,0,0,0,0,0,0,0,1,Light"
-general="Cantarell,11,-1,5,300,0,0,0,0,0,0,0,0,0,0,1,Light"
+fixed="Noto Sans Mono,10,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
+general="Inter Display,10,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
 
 [Interface]
 activate_item_on_single_click=1
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\x1b\0\0\x3g\0\0\0\0\0\0\0\0\0\0\x3\x1f\0\0\x3i\0\0\0\0\x2\0\0\0\x6@\0\0\0\0\0\0\0\0\0\0\x3\x1b\0\0\x3g)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\x1b\0\0\x3g\0\0\0\0\0\0\0\0\0\0\x3\x1b\0\0\x3g\0\0\0\0\x2\0\0\0\x6@\0\0\0\0\0\0\0\0\0\0\x3\x1b\0\0\x3g)
 
 [Troubleshooting]
 force_raster_widgets=1
