--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -173,13 +173,19 @@ misc {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 #
-windowrulev2 = float, class:(showmethekey-gtk), initialClass:(showmethekey-gtk)
-windowrulev2 = float, class:(wofi)
-windowrulev2 = dimaround, class:(wofi)
+windowrulev2 = float, class:^(showmethekey-gtk)$, initialClass:^(showmethekey-gtk)$
 windowrulev2 = workspace 2, class:^(firefox)$
 windowrulev2 = workspace 1, class:^(kitty)$
 windowrulev2 = workspace 5, class:^(org.telegram.desktop)$
 windowrulev2 = workspace 7, class:^(org.fooyin.fooyin)$
+windowrulev2 = stayfocused, class:^(polkit-gnome-authentication-agent-1)$
+# JOSM dialogs workaround
+windowrulev2 = tile, title:^(Редактор OpenStreetMap на Java*)
+windowrulev2 = stayfocused, title:^(Скачать)
+windowrulev2 = stayfocused, title:^(Error)$
+windowrulev2 = stayfocused, title:^(Добавить тег")$
+windowrulev2 = stayfocused, title:^(Изменить отношение*)
+windowrulev2 = stayfocused, title:(Отправить на сервер*)
 
 # Workspace rules
 # Replace no_gaps_when_only
